adding services page

--- a/services.html
+++ b/services.html
@@ -10,5 +10,6 @@
     <div> This is the service page, providing information of our expertise</div>
     <span>Engineering consultation</span>
     <span>Construction</span>
+    <span>rental</span>
 </body>
 </html>
