--- a/images/about.html
+++ b/images/about.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <div>
-        <span class="navbar"></span>
-        <span></span>
-        <span class="gandeng"></span> 
-        <span></span>
-        <span></span>
-        <span class="gandeng"></span> 
-        <span></span>
+    <div class="first">First row</div>
+    <div class="second">Second row</div>
+    <div class="rowblock">
+        <div class="couple">couple</div>
+        <div class="couple">couple</div>
     </div>
+    <div class="second">Third row</div>
+    <div class="rowblock">
+        <div class="couple">couple</div>
+        <div class="couple">couple</div>
+    </div>
+    
     
 </body>
 </html>
