--- a/images/home.html
+++ b/images/home.html
@@ -8,21 +8,19 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="header-bar">
-        <h1>Home Page</h1>
+    <div class="navbar">
+        <div class="navbar_item">Syllabus</div>
+        <div class="navbar_item">Units</div>
+        <div class="navbar_item">Project</div>
+        <div class="navbar_item">Resources</div>
+        <div class="signin">Sign In</div>
     </div>
-    <h2>The home page contains following unordered list</h2>
-    <ul>
-        <li>Introductory picture</li>
-        <li>Introductory paragraph</li>
-        <li>Product segmentation</li>
-        <li>Footnote bar</li>
-    </ul>
-    <h2>The home page have following ordered list of segmentation</h2>
-    <ol>
-        <li>Navigation bar</li>
-        <li>Container</li>
-        <li>Footnote bar</li>
-    </ol>
+    <div class="body">
+
+    </div>
+    <div class="footbar">
+        
+    </div>
+
 </body>
 </html>
