--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     <img src="images/tree.jpg" alt="tree picture">
     <h3>Picture of beautiful trees</h3>
     <a href="images/tree.html">Tree</a><br><br>
+
+    <h3>Topic about border style</h3>
+        <ul>
+            <li><a href=images/border.html>Border Style</a></li>
+        </ul>
     <a href="#redir">Go back to top</a>
+
+    
 
 </body>
 </html>
