--- a/images/service.html
+++ b/images/service.html
@@ -5,23 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="service.css">
 </head>
 <body>
-    <div>Service page gives information about what expertise our company is offering</div><br>
-    <div class="consul">Engineering consultation 
-        <p>Understanding what our clients' goal is our fundamental approach.</p>
-        <p>We have developed a framework to assist our client in determining the most possible efficient strategy for the project</p>
-        <p>Working with our proven framework gives us high confidence to deliver the satisfaction of schedule arrangement, project cost, as well as effective method for construction</p>
-    </div>
-    <div class="procon">Project construction
-        <p>We strongly believes that safety is the most important aspect to begin with.</p>
-        <p>Our team consist of experience people who are routinely assesed and trained with proper safety conduct.</p>
-        <p>We also regularly call for independent inspector to check our equipments  to ensure that all of our assets complies with safety standard code. </p>
-    </div>
-
-    <div class="rental">Equipment rental 
-        <p>We provide broad range of equipment with competitive pricing.</p>
+    <div class="container">
+        <div class="toprow">
+            <h1>Lorem Ipsum</h1>
+            <span id="latinquote">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</span>
+            <span id="engquote">"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</span>
+        </div>
+        <div class="boxes">
+            <div id="box1">
+                <h2>What is Lorem Ipsum?</h2>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
+            </div>
+            <div id="box2">
+                <h2>Where does it come from?</h2>
+                <p>
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. 
+                </p>
+            </div>
+            <div id="box3">
+                <h2>Why do we use it?</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+            </div>
+            <div id="box4">
+                <h2>Where can I get some?</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
