--- a/images/home.html
+++ b/images/home.html
@@ -23,10 +23,10 @@
     <div class="navbar">
         <div class="navigation" id="menu">
             <ul>
-                <li class="nav_item">About</li>
-                <li class="nav_item">Service</li>
-                <li class="nav_item">Project</li>
-                <li class="nav_item">Contact</li>
+                <li class="nav_item"><a href="about.html">About</a></li>
+                <li class="nav_item"><a href="service.html">Service</a></li>
+                <li class="nav_item"><a href="border.html">Project</a></li>
+                <li class="nav_item"><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
