--- a/images/home.html
+++ b/images/home.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <a href="#menu" class="menu_button">Menu</a>
+    <a href="#menu" class="menu_button" id="menu-popper">Menu</a>
     <div class="container">
         <h1 id="header">Domestika Course Notes</h1>
         <h1 id="subheader">—Introduction to Responsive Web Development with HTML and CSS </h1>
@@ -30,6 +30,7 @@
             </ul>
         </div>
     </div>
+    <script src="home.js"></script>
 </body>
 
 </html>
