--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Oslo</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100;400;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="firstrow">
-        <div class="navbar"></div>
-        <div class="caption"></div>
-        <div class="subcaption"></div>
+        <div class="navbar">
+            <div class="logo">
+                <img src="images/Logo.png" alt="Logo">
+            </div>
+            <ul class="navigation">
+                <li>CONTACTO</li>
+                <li>RESERVAS</li>
+                <li>OFERTAS</li>
+                <li>PRODUCTOS</li>
+                <li>EL ESPACIO</li>
+            </ul>
+        </div>
+        <div class="caption">
+            <span id="caption1">RECIEN HECHO,</span>
+            <span id="caption2">TODOS LOS DIAS</span>
+            <span id="caption3">________</span>
+        </div>
+        <div class="subcaption">
+            <p> Chocolate cake chocolate cake pie candy canes coholate cake bonbon. I love marzipan liquorce I love cake
+                chupa cups. Pie danish macaroon ice cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I love
+                lollipop.</p>
+        </div>
     </div>
     <div class="secondrow">
         <div class="promo1"></div>
@@ -31,4 +58,5 @@
     </div>
     <div class="sixthrow"></div>
 </body>
+
 </html>
