--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -30,8 +30,8 @@
         </div>
         <div class="caption">
             <span id="caption1">RECIEN HECHO,</span>
-            <span id="caption2">TODOS LOS DIAS</span>
-            <span id="caption3">________</span>
+            <span id="caption2">TODOS LOS DIAS</span><br>
+            <span id="caption3">_________</span>
         </div>
         <div class="subcaption">
             <p> Chocolate cake chocolate cake pie candy canes coholate cake bonbon. I love marzipan liquorce I love cake
@@ -40,8 +40,14 @@
         </div>
     </div>
     <div class="secondrow">
-        <div class="promo1"></div>
-        <div class="promo2"></div>
+        <div class="promo1">
+            <h2>VEN AL BRUNCH DE LOS  DOMINGOS</h2><br>
+            <span>Sesame snaps icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. Sugar plum I love gummi bears.  </span>
+        </div>
+        <div class="promo2">
+            <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2><br>
+            <span>Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame snaps bear claw. Cake dragee danish. Powder I love liquorice macaroon.</span>
+        </div>
     </div>
     <div class="thirdrow">
         <div class="product_explorer"></div>
