--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -1,68 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Oslo</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100;400;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:wght@100;400;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body>
     <div class="firstrow">
-        <div class="navbar">
-            <div class="logo">
-                <img src="images/Logo.png" alt="Logo">
-            </div>
-            <ul class="navigation">
-                <li>CONTACTO</li>
-                <li>RESERVAS</li>
-                <li>OFERTAS</li>
-                <li>PRODUCTOS</li>
-                <li>EL ESPACIO</li>
-            </ul>
+      <div class="navbar">
+        <div class="logo">
+          <img src="images/Logo.png" alt="Logo" />
         </div>
-        <div class="caption">
-            <span id="caption1">RECIEN HECHO,</span>
-            <span id="caption2">TODOS LOS DIAS</span><br>
-            <span id="caption3">_________</span>
-        </div>
-        <div class="subcaption">
-            <p> Chocolate cake chocolate cake pie candy canes coholate cake bonbon. I love marzipan liquorce I love cake
-                chupa cups. Pie danish macaroon ice cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I love
-                lollipop.</p>
-        </div>
+        <ul class="navigation">
+          <li>CONTACTO</li>
+          <li>RESERVAS</li>
+          <li>OFERTAS</li>
+          <li>PRODUCTOS</li>
+          <li>EL ESPACIO</li>
+        </ul>
+      </div>
+      <div class="caption">
+        <span id="caption1">RECIEN HECHO,</span>
+        <span id="caption2">TODOS LOS DIAS</span><br />
+        <span id="caption3">_________</span>
+      </div>
+      <div class="subcaption">
+        <p>
+          Chocolate cake chocolate cake pie candy canes coholate cake bonbon. I
+          love marzipan liquorce I love cake chupa cups. Pie danish macaroon ice
+          cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I love
+          lollipop.
+        </p>
+      </div>
     </div>
     <div class="secondrow">
-        <div class="promo1">
-            <h2>VEN AL BRUNCH DE LOS  DOMINGOS</h2><br>
-            <span>Sesame snaps icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. Sugar plum I love gummi bears.  </span>
-        </div>
-        <div class="promo2">
-            <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2><br>
-            <span>Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame snaps bear claw. Cake dragee danish. Powder I love liquorice macaroon.</span>
-        </div>
+      <div class="promo1">
+        <h2>VEN AL BRUNCH DE LOS DOMINGOS</h2>
+        <br />
+        <p>
+          Sesame snaps icing chocolate bar. I love donut powder sesame snaps.
+          Jelly-o topping caramels. Sugar plum I love gummi bears.
+        </p>
+      </div>
+      <div class="promo2">
+        <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2>
+        <br />
+        <p>
+          Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame
+          snaps bear claw. Cake dragee danish. Powder I love liquorice macaroon.
+        </p>
+      </div>
     </div>
     <div class="thirdrow">
-        <div class="product_explorer"></div>
+      <div class="caption">
+        <span id="caption1">VEN A DESAYUNAR</span>
+        <span id="caption3">_________</span>
+      </div>
+      <div class="subcaption">
+        <p>
+          Bonbon topping I love sweet roll I love candy icing chocolate jelly.
+          Pie souffle sweet. Apple pie bonbon caramels powder.
+        </p>
+      </div>
     </div>
     <div class="fourthrow">
-        <div class="bread"></div>
-        <div class="dailymeal"></div>
-        <div class="sweets"></div>
-        <div class="rawfood"></div>
+      <div class="bread"></div>
+      <div class="dailymeal"></div>
+      <div class="sweets"></div>
+      <div class="rawfood"></div>
     </div>
     <div class="fifthrow">
-        <div class="contact"></div>
-        <div class="shop_map"></div>
+      <div class="contact"></div>
+      <div class="shop_map"></div>
     </div>
     <div class="sixthrow"></div>
-</body>
-
+  </body>
 </html>
