--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -71,6 +71,7 @@
           Pie souffle sweet. Apple pie bonbon caramels powder.
         </p>
       </div>
+      <div
     </div>
     <div class="fourthrow">
       <div class="bread"></div>
