organized but not decorized

--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -71,24 +71,86 @@
           Pie souffle sweet. Apple pie bonbon caramels powder.
         </p>
       </div>
-      <div class="productbutton">
-        DESCUBRE NUESTROS PRODUCTOS
-      </div>
-      
-
-      </div>
-      <div
+      <div class="productbutton">DESCUBRE NUESTROS PRODUCTOS</div>
     </div>
     <div class="fourthrow">
-      <div class="bread"></div>
-      <div class="dailymeal"></div>
-      <div class="sweets"></div>
-      <div class="rawfood"></div>
+      <div class="productprofile">
+        <div class="menulogo">
+          <img src="Images/Icono1.png" alt="Icono1" />
+        </div>
+        <div class="menudescrip">
+          <h3>PAN RECIEN HECHO</h3>
+          <p>
+            Cupcake danish I love halvah bonbon icing donut. Sweet caramels
+            gingerbread bear claw jujubes chocolate cake pudding sesamesnaps
+            bonbon. Chocolate cake wafer pudding muffin wafer sweet roll I love
+            chupa chups. Apple pie jujubes ice cream sugar plum topping.
+          </p>
+        </div>
+      </div>
+      <div class="productprofile">
+        <div class="menulogo">
+          <img src="Images/Icono2.png" alt="Icono2" />
+        </div>
+        <div class="menudescrip">
+          <h3>TARTAS PARA CADA DIA</h3>
+          <p>
+            Cookie cake jelly beans chocolate cake carrot ccroissant icing.
+            Caramels liquorice sesame snaps sugar plum Ilove bonbon. I love I
+            love halvah.
+          </p>
+        </div>
+      </div>
+      <div class="productprofile">
+        <div class="menulogo">
+          <img src="Images/Icono3.png" alt="Icono3" />
+        </div>
+        <div class="menudescrip">
+          <h3>PRUEBA NUESTROS DUCLES</h3>
+          <p>
+            Caramels liquorice sesame snaps sugar plum I love bonbon. I love I
+            love halvah. I love marzipan cake I love donut tiramisu pudding
+            cotton candy liquorice. Jellyu beans chocolate brownie gummi bears
+            dragee jelly-o.
+          </p>
+        </div>
+      </div>
+      <div class="productprofile">
+        <div class="menulogo">
+          <img src="Images/Icono4.png" alt="Icono4" />
+        </div>
+        <div class="menudescrip">
+          <h3>INGRENDIENTES ECOLOGICOS</h3>
+          <p>
+            Carrot cake fruitcake cheesecake muffin lollipop croisant dessert
+            halvah. Cake pie bear claw marsh-mallow marzipan cake. Carrot cake I
+            love cotton candy ice cream chupa chups donut. Lemon drps sweet
+            marsh mallow gummies I love dragee danish cake. Tart caramels sweet
+            roll jelly-o luquorice tart.
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="fifthrow">
-      <div class="contact"></div>
-      <div class="shop_map"></div>
+    <div class="secondrow">
+      <div class="promo2">
+        <h2>CONTACTA CON NOSOTROS</h2>
+        <br />
+        <p>
+          Si quieres hacer una reserva, tienes alguna sugerencia o simlemente
+          queres saludar, escribenos a:<strong>cafeoslo@cafeoslo.es</strong>
+        </p>
+      </div>
+      <div class="promo1">
+        <h2>?SABES DONDE ESTAMOS?</h2>
+        <br />
+        <p>C/Mayour,15</p>
+        <p>C/Mayour,15</p>
+        <p>C/Mayour,15</p>
+      </div>
     </div>
-    <div class="sixthrow"></div>
+    <div class="sixthrow">
+      <span>Septiembre 2015 . </span>
+      <span>Todos los derechos reservados</span>
+    </div>
   </body>
 </html>
