fixing background size

--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -15,142 +15,146 @@
   </head>
 
   <body>
-    <div class="firstrow">
-      <div class="navbar">
-        <div class="logo">
-          <img src="images/Logo.png" alt="Logo" />
+    <div class="all">
+      <div class="firstrow">
+        <div class="navbar">
+          <div class="logo">
+            <img src="images/Logo.png" alt="Logo" />
+          </div>
+          <ul class="navigation">
+            <li>CONTACTO</li>
+            <li>RESERVAS</li>
+            <li>OFERTAS</li>
+            <li>PRODUCTOS</li>
+            <li>EL ESPACIO</li>
+          </ul>
         </div>
-        <ul class="navigation">
-          <li>CONTACTO</li>
-          <li>RESERVAS</li>
-          <li>OFERTAS</li>
-          <li>PRODUCTOS</li>
-          <li>EL ESPACIO</li>
-        </ul>
-      </div>
-      <div class="caption">
-        <span id="caption1">RECIEN HECHO,</span>
-        <span id="caption2">TODOS LOS DIAS</span><br />
-        <span id="caption3">_________</span>
-      </div>
-      <div class="subcaption">
-        <p>
-          Chocolate cake chocolate cake pie candy canes coholate cake bonbon. I
-          love marzipan liquorce I love cake chupa cups. Pie danish macaroon ice
-          cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I love
-          lollipop.
-        </p>
-      </div>
-    </div>
-    <div class="secondrow">
-      <div class="promo1">
-        <h2>VEN AL BRUNCH DE LOS DOMINGOS</h2>
-        <br />
-        <p>
-          Sesame snaps icing chocolate bar. I love donut powder sesame snaps.
-          Jelly-o topping caramels. Sugar plum I love gummi bears.
-        </p>
-      </div>
-      <div class="promo2">
-        <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2>
-        <br />
-        <p>
-          Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame
-          snaps bear claw. Cake dragee danish. Powder I love liquorice macaroon.
-        </p>
-      </div>
-    </div>
-    <div class="thirdrow">
-      <div class="caption">
-        <span id="caption1">VEN A DESAYUNAR</span>
-        <span id="caption3">_________</span>
-      </div>
-      <div class="subcaption">
-        <p>
-          Bonbon topping I love sweet roll I love candy icing chocolate jelly.
-          Pie souffle sweet. Apple pie bonbon caramels powder.
-        </p>
-      </div>
-      <div class="productbutton">DESCUBRE NUESTROS PRODUCTOS</div>
-    </div>
-    <div class="fourthrow">
-      <div class="productprofile">
-        <div class="menulogo">
-          <img src="Images/Icono1.png" alt="Icono1" />
+        <div class="caption">
+          <span id="caption1">RECIEN HECHO,</span>
+          <span id="caption2">TODOS LOS DIAS</span><br />
+          <span id="caption3">_________</span>
         </div>
-        <div class="menudescrip">
-          <h3>PAN RECIEN HECHO</h3>
+        <div class="subcaption">
           <p>
-            Cupcake danish I love halvah bonbon icing donut. Sweet caramels
-            gingerbread bear claw jujubes chocolate cake pudding sesamesnaps
-            bonbon. Chocolate cake wafer pudding muffin wafer sweet roll I love
-            chupa chups. Apple pie jujubes ice cream sugar plum topping.
+            Chocolate cake chocolate cake pie candy canes coholate cake bonbon. I
+            love marzipan liquorce I love cake chupa cups. Pie danish macaroon ice
+            cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I love
+            lollipop.
+          </p>
+        </div>
+        <div class="spacing"></div>
+      </div>
+      <div class="secondrow">
+        <div class="promo1">
+          <h2>VEN AL BRUNCH DE LOS DOMINGOS</h2>
+          <br />
+          <p>
+            Sesame snaps icing chocolate bar. I love donut powder sesame snaps.
+            Jelly-o topping caramels. Sugar plum I love gummi bears.
+          </p>
+        </div>
+        <div class="promo2">
+          <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2>
+          <br />
+          <p>
+            Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame
+            snaps bear claw. Cake dragee danish. Powder I love liquorice macaroon.
           </p>
         </div>
       </div>
-      <div class="productprofile">
-        <div class="menulogo">
-          <img src="Images/Icono2.png" alt="Icono2" />
+      <div class="thirdrow">
+        <div class="caption">
+          <span id="caption1">VEN A DESAYUNAR</span>
+          <span id="caption3">_________</span>
         </div>
-        <div class="menudescrip">
-          <h3>TARTAS PARA CADA DIA</h3>
+        <div class="subcaption">
           <p>
-            Cookie cake jelly beans chocolate cake carrot ccroissant icing.
-            Caramels liquorice sesame snaps sugar plum Ilove bonbon. I love I
-            love halvah.
+            Bonbon topping I love sweet roll I love candy icing chocolate jelly.
+            Pie souffle sweet. Apple pie bonbon caramels powder.
           </p>
         </div>
+        <div class="productbutton">DESCUBRE NUESTROS PRODUCTOS</div>
+        <div class="spacing"></div>
       </div>
-      <div class="productprofile">
-        <div class="menulogo">
-          <img src="Images/Icono3.png" alt="Icono3" />
+      <div class="fourthrow">
+        <div class="productprofile">
+          <div class="menulogo">
+            <img src="Images/Icono1.png" alt="Icono1" />
+          </div>
+          <div class="menudescrip">
+            <h3>PAN RECIEN HECHO</h3>
+            <p>
+              Cupcake danish I love halvah bonbon icing donut. Sweet caramels
+              gingerbread bear claw jujubes chocolate cake pudding sesamesnaps
+              bonbon. Chocolate cake wafer pudding muffin wafer sweet roll I love
+              chupa chups. Apple pie jujubes ice cream sugar plum topping.
+            </p>
+          </div>
         </div>
-        <div class="menudescrip">
-          <h3>PRUEBA NUESTROS DUCLES</h3>
+        <div class="productprofile">
+          <div class="menulogo">
+            <img src="Images/Icono2.png" alt="Icono2" />
+          </div>
+          <div class="menudescrip">
+            <h3>TARTAS PARA CADA DIA</h3>
+            <p>
+              Cookie cake jelly beans chocolate cake carrot ccroissant icing.
+              Caramels liquorice sesame snaps sugar plum Ilove bonbon. I love I
+              love halvah.
+            </p>
+          </div>
+        </div>
+        <div class="productprofile">
+          <div class="menulogo">
+            <img src="Images/Icono3.png" alt="Icono3" />
+          </div>
+          <div class="menudescrip">
+            <h3>PRUEBA NUESTROS DUCLES</h3>
+            <p>
+              Caramels liquorice sesame snaps sugar plum I love bonbon. I love I
+              love halvah. I love marzipan cake I love donut tiramisu pudding
+              cotton candy liquorice. Jellyu beans chocolate brownie gummi bears
+              dragee jelly-o.
+            </p>
+          </div>
+        </div>
+        <div class="productprofile">
+          <div class="menulogo">
+            <img src="Images/Icono4.png" alt="Icono4" />
+          </div>
+          <div class="menudescrip">
+            <h3>INGRENDIENTES ECOLOGICOS</h3>
+            <p>
+              Carrot cake fruitcake cheesecake muffin lollipop croisant dessert
+              halvah. Cake pie bear claw marsh-mallow marzipan cake. Carrot cake I
+              love cotton candy ice cream chupa chups donut. Lemon drps sweet
+              marsh mallow gummies I love dragee danish cake. Tart caramels sweet
+              roll jelly-o luquorice tart.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="secondrow">
+        <div class="promo2">
+          <h2>CONTACTA CON NOSOTROS</h2>
+          <br />
           <p>
-            Caramels liquorice sesame snaps sugar plum I love bonbon. I love I
-            love halvah. I love marzipan cake I love donut tiramisu pudding
-            cotton candy liquorice. Jellyu beans chocolate brownie gummi bears
-            dragee jelly-o.
+            Si quieres hacer una reserva, tienes alguna sugerencia o simlemente
+            queres saludar, escribenos a:<strong>cafeoslo@cafeoslo.es</strong>
           </p>
         </div>
-      </div>
-      <div class="productprofile">
-        <div class="menulogo">
-          <img src="Images/Icono4.png" alt="Icono4" />
-        </div>
-        <div class="menudescrip">
-          <h3>INGRENDIENTES ECOLOGICOS</h3>
-          <p>
-            Carrot cake fruitcake cheesecake muffin lollipop croisant dessert
-            halvah. Cake pie bear claw marsh-mallow marzipan cake. Carrot cake I
-            love cotton candy ice cream chupa chups donut. Lemon drps sweet
-            marsh mallow gummies I love dragee danish cake. Tart caramels sweet
-            roll jelly-o luquorice tart.
-          </p>
+        <div class="promo1">
+          <h2>?SABES DONDE ESTAMOS?</h2>
+          <br />
+          <p>C/Mayour,15</p>
+          <p>C/Mayour,15</p>
+          <p>C/Mayour,15</p>
         </div>
       </div>
-    </div>
-    <div class="secondrow">
-      <div class="promo2">
-        <h2>CONTACTA CON NOSOTROS</h2>
-        <br />
-        <p>
-          Si quieres hacer una reserva, tienes alguna sugerencia o simlemente
-          queres saludar, escribenos a:<strong>cafeoslo@cafeoslo.es</strong>
-        </p>
+      <div class="sixthrow">
+        <span>Septiembre 2015 . </span>
+        <span>Todos los derechos reservados</span>
       </div>
-      <div class="promo1">
-        <h2>?SABES DONDE ESTAMOS?</h2>
-        <br />
-        <p>C/Mayour,15</p>
-        <p>C/Mayour,15</p>
-        <p>C/Mayour,15</p>
-      </div>
-    </div>
-    <div class="sixthrow">
-      <span>Septiembre 2015 . </span>
-      <span>Todos los derechos reservados</span>
     </div>
   </body>
 </html>
