--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -48,18 +48,18 @@
         <div class="promo1">
           <h2>VEN AL BRUNCH DE LOS DOMINGOS</h2>
           <br />
-          <p>
+          <div class="subpromo"><p>
             Sesame snaps icing chocolate bar. I love donut powder sesame snaps.
             Jelly-o topping caramels. Sugar plum I love gummi bears.
-          </p>
+          </p></div>
         </div>
         <div class="promo2">
           <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2>
           <br />
-          <p>
+          <div class="subpromo"><p>
             Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame
             snaps bear claw. Cake dragee danish. Powder I love liquorice macaroon.
-          </p>
+          </p></div>
         </div>
       </div>
       <div class="thirdrow">
@@ -138,22 +138,22 @@
         <div class="promo2">
           <h2>CONTACTA CON NOSOTROS</h2>
           <br />
-          <p>
+          <div class="subpromo"><p>
             Si quieres hacer una reserva, tienes alguna sugerencia o simlemente
-            queres saludar, escribenos a:<strong>cafeoslo@cafeoslo.es</strong>
-          </p>
+            queres saludar, escribenos a: <strong>cafeoslo@cafeoslo.es</strong>
+          </p></div>
         </div>
         <div class="promo1">
           <h2>?SABES DONDE ESTAMOS?</h2>
           <br />
-          <p>C/Mayour,15</p>
-          <p>C/Mayour,15</p>
-          <p>C/Mayour,15</p>
+          <div class="subpromo"><p>C/Mayour,15</p>
+          <p>00000 Barcelona</p>
+          <p><strong>(Google Maps)</strong></p>
+          </div>
         </div>
       </div>
       <div class="sixthrow">
-        <span>Septiembre 2015 . </span>
-        <span>Todos los derechos reservados</span>
+        <div class="patent">Septiembre 2015 • Todos los derechos reservados</div>
       </div>
     </div>
   </body>
