wide screen finalization

--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -22,11 +22,11 @@
             <img src="images/Logo.png" alt="Logo" />
           </div>
           <ul class="navigation">
-            <li>CONTACTO</li>
-            <li>RESERVAS</li>
-            <li>OFERTAS</li>
-            <li>PRODUCTOS</li>
-            <li>EL ESPACIO</li>
+            <li><a href="#contacto">CONTACTO</a></li>
+            <li><a href="#reservas">RESERVAS</a></li>
+            <li><a href="#ofertas">OFERTAS</a></li>
+            <li><a href="#productos">PRODUCTOS</a></li>
+            <li><a href="#el_espacio">EL ESPACIO</a></li>
           </ul>
         </div>
         <div class="caption">
@@ -45,8 +45,8 @@
         <div class="spacing"></div>
       </div>
       <div class="secondrow">
-        <div class="promo1">
-          <h2>VEN AL BRUNCH DE LOS DOMINGOS</h2>
+        <div class="promo1" id="el_espacio">
+          <div class="promoheader">VEN AL BRUNCH DE LOS DOMINGOS</div>
           <br />
           <div class="subpromo"><p>
             Sesame snaps icing chocolate bar. I love donut powder sesame snaps.
@@ -54,7 +54,7 @@
           </p></div>
         </div>
         <div class="promo2">
-          <h2>CELEBRA TUS FIESTAS CON NOSOTROS</h2>
+          <div class="promoheader">CELEBRA TUS FIESTAS CON NOSOTROS</div>
           <br />
           <div class="subpromo"><p>
             Bonbon sweet bonbon jelly beans jelly-o I love lollipop. Cookie sesame
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="thirdrow">
-        <div class="caption">
+        <div class="caption" id="ofertas">
           <span id="caption1">VEN A DESAYUNAR</span>
           <span id="caption3">_________</span>
         </div>
@@ -76,7 +76,7 @@
         <div class="productbutton">DESCUBRE NUESTROS PRODUCTOS</div>
         <div class="spacing"></div>
       </div>
-      <div class="fourthrow">
+      <div class="fourthrow" id="productos">
         <div class="productprofile">
           <div class="menulogo">
             <img src="Images/Icono1.png" alt="Icono1" />
@@ -136,7 +136,7 @@
       </div>
       <div class="secondrow">
         <div class="promo2">
-          <h2>CONTACTA CON NOSOTROS</h2>
+          <div class="promoheader" id="contacto">CONTACTA CON NOSOTROS</div>
           <br />
           <div class="subpromo"><p>
             Si quieres hacer una reserva, tienes alguna sugerencia o simlemente
@@ -144,7 +144,7 @@
           </p></div>
         </div>
         <div class="promo1">
-          <h2>?SABES DONDE ESTAMOS?</h2>
+          <div class="promoheader" id="reservas">¿SABES DONDE ESTAMOS?</div>
           <br />
           <div class="subpromo"><p>C/Mayour,15</p>
           <p>00000 Barcelona</p>
