--- a/FInal Project/index.html
+++ b/FInal Project/index.html
@@ -20,7 +20,7 @@
           <div class="logo">
             <img src="images/Logo.png" alt="Logo" />
           </div>
-          <ul class="navigation">
+          <ul class="navigation" id="menu_list">
             <li><a href="#contacto">CONTACTO</a></li>
             <li><a href="#reservas">RESERVAS</a></li>
             <li><a href="#ofertas">OFERTAS</a></li>
